[package]
name = "dydl"
version = "0.1.0"
edition = "2021"
author = "ClassmateLin <classmatein.site@gmail.com>"
about = "Douyin video downloader"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = {version = "1"}
json = {version = "*"}
pbr = {version = "1.0.4"}

[profile.release]
lto=true